modern/docker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traccar-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traccar-web
            port: 
              number: 3000
